5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1747_3091.log
== TEST (2019-05-16 11:06:07) 
-- CODE:
vit= input("vitoria:").upper()
emp= input("empate:").upper()
der= input("derrota:").upper()
v = 3
e = 1
d = 0
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:06:47) 
-- CODE:
vit= input("vitoria:").upper()
emp= input("empate:").upper()
der= input("derrota:").upper()
V = 3
E = 1
D = 0
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:31) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:09:11) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
-- EXECUTION TIME:
0.189339
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
38.1
---- user output:

-- TEST CASE 2:
---- input:
A
B
C
D
E
V
X
---- correct output:
44.44
---- user output:

-- TEST CASE 3:
---- input:
V
V
V
a
a
a
a
v
v
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:49) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
while( y!=X):
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while( y!=X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:14) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
while( y=!X):
	print(y)
-- ERROR:
File "XXXX", line 5
    while( y=!X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:14:15) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
while( y=!X):
	print(y)
-- EXECUTION TIME:
0.133388
-- ERROR:
  File "/home/codebench/codes/1747/3091/main.py", line 5
    while( y=!X):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:15) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
while( y=!X):
	print(y)
-- ERROR:
File "XXXX", line 5
    while( y=!X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:17) 
-- CODE:
y= input("resultado:").upper()
V = 3
E = 1
D = 0
while( y=!X):
	print(y)
-- ERROR:
File "XXXX", line 5
    while( y=!X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
